--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 <body>
     <header>
         <nav>
-            <h1><a href="/">Restaurant Reviews</a></h1>
+            <h1><a  href="/">Restaurant Reviews</a></h1>
         </nav>
     </header>
 
     <main id="maincontent" class="flex-container">
-        <section id="map-container" class="box map-box">
-            <div id="map"></div>
+        <section  id="map-container" class="box map-box">
+            <div id="map" tabindex="-1"></div>
         </section>
         <section class="box filter-box">
             <div class="filter-options">
                 <h2>Filter Results</h2>
-                <select id="neighborhoods-select" name="neighborhoods" aria-label="Click" onchange="updateRestaurants()">
-                    <option value="all">All Neighborhoods</option>
+                <select  id="neighborhoods-select" name="neighborhoods" aria-label="Click" onchange="updateRestaurants()">
+                    <option  value="all">All Neighborhoods</option>
                 </select>
-                <select id="cuisines-select" name="cuisines" aria-label="Click" onchange="updateRestaurants()">
-                    <option value="all">All Cuisines</option>
+                <select  id="cuisines-select" name="cuisines" aria-label="Click" onchange="updateRestaurants()">
+                    <option  value="all">All Cuisines</option>
                 </select>
             </div>
             <ul id="restaurants-list" class="flex-container"></ul>
@@ -38,6 +38,7 @@
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     <script src="js/dbhelper.js"></script>
     <script src="js/main.js"></script>
+    
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 
 
