--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="box filter-box">
             <div class="filter-options">
                 <h2>Filter Results</h2>
-                <select  id="neighborhoods-select" name="neighborhoods" aria-label="Click" onchange="updateRestaurants()">
+                <select role="tablist" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
                     <option  value="all">All Neighborhoods</option>
                 </select>
                 <select  id="cuisines-select" name="cuisines" aria-label="Click" onchange="updateRestaurants()">
