--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <h1><a  href="/">Restaurant Reviews</a></h1>
+            <h1><a aria-label="Home" href="/">Restaurant Reviews</a></h1>
         </nav>
     </header>
 
@@ -28,7 +28,7 @@
                 <select role="tablist" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
                     <option  value="all">All Neighborhoods</option>
                 </select>
-                <select  id="cuisines-select" name="cuisines" aria-label="Click" onchange="updateRestaurants()">
+                <select  id="cuisines-select" name="cuisines"  onchange="updateRestaurants()">
                     <option  value="all">All Cuisines</option>
                 </select>
             </div>
@@ -43,7 +43,7 @@
 
 
     <footer id="footer">
-        Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+        Copyright (c) 2017 <a aria-label="Home" href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
     </footer>
 
 </body>
