--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <header>
-        <nav>
+        
+        <nav role="navigation">
+            <a href="#filter-options" class="skip">Skip to maincontent</a>
             <h1><a aria-label="Home" href="/">Restaurant Reviews</a></h1>
         </nav>
     </header>
@@ -22,17 +24,17 @@
         <section  id="map-container" class="box map-box">
             <div id="map" tabindex="-1"></div>
         </section>
-        <section class="box filter-box">
-            <div class="filter-options">
-                <h2>Filter Results</h2>
-                <select role="tablist" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-                    <option  value="all">All Neighborhoods</option>
+        <section  aria-label="Filter Box Section" class="box filter-box">
+            <div id="filter-options" class="filter-options" aria-label="Filter Section">
+               <h2>Filter Results</h2>
+                <select aria-label="Filter by Neighbourhoods" aria-controls="restaurants-list" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+                    <option aria-label="All Neighborhoods Selection" value="all">All Neighborhoods</option>
                 </select>
-                <select  id="cuisines-select" name="cuisines"  onchange="updateRestaurants()">
-                    <option  value="all">All Cuisines</option>
+                <select aria-label="Filter by Cuisines" aria-controls="restaurants-list" id="cuisines-select" name="cuisines"  onchange="updateRestaurants()">
+                    <option aria-label="All Cuisine Selection" value="all">All Cuisines</option>
                 </select>
             </div>
-            <ul id="restaurants-list" class="flex-container"></ul>
+            <ul id="restaurants-list" role="region" aria-live="polite"  class="flex-container"></ul>
         </section>
     </main>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
