--- a/restaurant.html
+++ b/restaurant.html
@@ -16,13 +16,14 @@
 <body class="inside">
     <!-- Beginning header -->
     <header>
+        <a href="#restaurant-name" class="skip">Skip to maincontent</a>
         <!-- Beginning nav -->
-        <nav>
+        <nav role="navigation">
             <h1><a aria-label="Home" href="/">Restaurant Reviews</a></h1>
         </nav>
         <!-- Beginning breadcrumb -->
         <ul id="breadcrumb">
-            <li><a href="/">Home</a></li>
+            <li><a href="/" role="button">Home</a></li>
         </ul>
         <!-- End breadcrumb -->
         <!-- End nav -->
@@ -32,12 +33,12 @@
     <!-- Beginning main -->
     <main id="maincontent" class="flex-container">
         <!-- Beginning map -->
-        <section id="map-container">
+        <section id="map-container" role="section">
             <div id="map"></div>
         </section>
         <!-- End map -->
         <!-- Beginning restaurant -->
-        <section id="restaurant-container" class="box">
+        <section id="restaurant-container" class="box" aria-label="restaurant section">
             <h1 id="restaurant-name"></h1>
             <img id="restaurant-img">
             <p id="restaurant-cuisine"></p>
@@ -46,8 +47,8 @@
         </section>
         <!-- end restaurant -->
         <!-- Beginning reviews -->
-        <section id="reviews-container" class="box">
-            <ul id="reviews-list"></ul>
+        <section id="reviews-container" class="box" aria-label="review section" >
+            <ul id="reviews-list" aria-label="review list"></ul>
         </section>
         <!-- End reviews -->
     </main>
