More Aria atritbutes added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
 
     <main id="maincontent" class="flex-container">
-        <section  id="map-container" class="box map-box">
-            <div id="map" tabindex="-1"></div>
+        <section  id="map-container" class="box map-box" >
+            <div id="map" aria-label="location" role="application"></div>
         </section>
         <section  aria-label="Filter Box Section" class="box filter-box">
             <div id="filter-options" class="filter-options" aria-label="Filter Section">
