--- a/restaurant.html
+++ b/restaurant.html
@@ -22,7 +22,7 @@
             <h1><a aria-label="Home" href="/">Restaurant Reviews</a></h1>
         </nav>
         <!-- Beginning breadcrumb -->
-        <ul id="breadcrumb">
+        <ul id="breadcrumb" aria-label="breadcrumb" role="navigation">
             <li><a href="/" role="button">Home</a></li>
         </ul>
         <!-- End breadcrumb -->
@@ -31,15 +31,15 @@
     <!-- End header -->
 
     <!-- Beginning main -->
-    <main id="maincontent" class="flex-container">
+    <main id="maincontent" class="flex-container"  >
         <!-- Beginning map -->
-        <section id="map-container" role="section">
-            <div id="map"></div>
+        <section id="map-container" >
+            <div id="map" aria-label="location" role="application"></div>
         </section>
         <!-- End map -->
         <!-- Beginning restaurant -->
         <section id="restaurant-container" class="box" aria-label="restaurant section">
-            <h1 id="restaurant-name"></h1>
+            <h2 id="restaurant-name"></h2>
             <img id="restaurant-img">
             <p id="restaurant-cuisine"></p>
             <p id="restaurant-address"></p>
